--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -11,16 +11,16 @@ block content
         | Conectate a la comunidad
       .row.omb_row-sm-offset-3
         .col-xs-12.col-sm-6
-          form#conectar.omb_loginForm(action='', autocomplete='off', method='POST')
+          form#conectar.omb_loginForm(action='/api/auth/login', autocomplete='off', method='POST')
             .input-group
               span.input-group-addon
                 i.fa.fa-user
-              input.form-control(type='email', name='email', placeholder='Email / Correo Electrónico')
+              input.form-control(value='soporte@sinapsis.com' type='email', name='email', placeholder='Email / Correo Electrónico')
             span.help-block
             .input-group
               span.input-group-addon
                 i.fa.fa-lock
-              input.form-control(type='password', name='password', placeholder='Contraseña')
+              input.form-control(value="superman" type='password', name='password', placeholder='Contraseña')
             br
             button.btn.btn-lg.btn-primary.btn-block(type='submit') Conectar
       .row.omb_row-sm-offset-3
