--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -3,7 +3,7 @@ block head-scripts
   link(rel='stylesheet', href='/css/login.css')
 block bottom-scripts
   script(src="/js/register.js")
-  
+
 block content
   .container
     .omb_login
@@ -27,7 +27,7 @@ block content
           span o llena el siguiente formulario y te enviaremos un correo para completar el registro:
       .row.omb_row-sm-offset-3
         .col-xs-12.col-sm-6
-          form#register.omb_loginForm(action='', autocomplete='off', method='POST')
+          form#register.omb_loginForm(action='/api/auth/register', autocomplete='off', method='POST')
             .input-group
               span.input-group-addon
                 i.fa.fa-user
