--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,22 +2,22 @@ doctype html
 html
   head
     title= title
-    link(href='bootstrap/css/bootstrap.min.css', rel='stylesheet')
-    script(src="/js/libs/vue.js")
-    script(src="/js/libs/jquery-3.1.1.js")
-    script(src="/js/libs/jquery-ajax.js")
+    link(href='/libs/bootstrap/css/bootstrap.css', rel='stylesheet')
+    script(src='/libs/vue.js')
+    script(src='/libs/jquery-3.1.1.js')
+    script(src='/libs/jquery-ajax.js')
     block page-libs
 
     link(rel='stylesheet', href='/css/main.css')
     block head-scripts
-  include partials/notifications.pug    
+  include partials/notifications.pug
   body
     include partials/nav.pug
-    
+
     block content
 
     include partials/footer.pug
 
-script(src='bootstrap/js/bootstrap.min.js')
-script(src="/js/libs/flash.js")
+script(src='/libs/bootstrap/js/bootstrap.js')
+script(src='/libs/flash.js')
 block bottom-scripts
