--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,11 +6,19 @@ html
     script(src='/libs/vue.js')
     script(src='/libs/jquery-3.1.1.js')
     script(src='/libs/jquery-ajax.js')
+    script(src='/libs/flash.js')
     block page-libs
 
     link(rel='stylesheet', href='/css/main.css')
     block head-scripts
   include partials/notifications.pug
+
+
+  script var flash_errors = !{flash_errors?JSON.stringify(flash_errors):false}
+
+  script.
+    flash_errors.forEach(flash.error)
+
   body
     include partials/nav.pug
 
@@ -19,5 +27,4 @@ html
     include partials/footer.pug
 
 script(src='/libs/bootstrap/js/bootstrap.js')
-script(src='/libs/flash.js')
 block bottom-scripts
