--- a/views/users.pug
+++ b/views/users.pug
@@ -47,10 +47,10 @@ block content
   hr
   .container
     .row
-      .col-md-12
+      .col-md-12#userslist
         .title
           span Listado de todos los usuarios, asegurate de filtrar para navegar rápido
-        .col-sm-4.col-md-2.box-user-outer
+        .col-sm-4.col-md-2.box-user-outer(v-for='user in users')
           .box-user
             .img-wrapper
               a(href='detail.html')
@@ -70,175 +70,8 @@ block content
                 a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
                   i.ace-icon.fa.fa-heart
             h6
-              a(href='#') Juan Perez
+              a(href='#') {{user.email}}
               div
                 | username:  juanp
               small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.hidden-xs.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar6.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.hidden-xs.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar3.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.hidden-sm.hidden-xs.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar5.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar6.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.hidden-xs.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar5.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.hidden-xs.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar3.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
-        .col-sm-4.col-md-2.hidden-sm.hidden-xs.box-user-outer
-          .box-user
-            .img-wrapper
-              a(href='detail.html')
-                img(alt='user', src='https://bootdey.com/img/Content/avatar/avatar1.png')
-              .tags
-                span.label-tags
-                  span.label.label-danger nivel 12
-                span.label-tags
-                  span.label.label-info 2,344 créditos
-                span.label-tags
-                  span.label.label-warning biología, naturaleza
-              .option
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Add to Cart')
-                  i.ace-icon.fa.fa-shopping-cart
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Compare')
-                  i.ace-icon.fa.fa-align-left
-                a(href='#', data-toggle='tooltip', data-placement='bottom', title='', data-original-title='Wishlist')
-                  i.ace-icon.fa.fa-heart
-            h6
-              a(href='#') Juan Perez
-              div
-                | username:  juanp
-              small Hola me gusta lo que funciona asi y luego ver que todo este meor
+        
