cambios en git ignore y vistas que ya muestran los datos.

--- a/views/auth/profile.pug
+++ b/views/auth/profile.pug
@@ -21,7 +21,7 @@ block content
                   |  El lord de la Biología
                 li
                   b contacto:
-                  |  jonniespratley@me.com
+                  |  #{user.email}
                 li
                   b website:
                   |  http://jonniespratley.me
